--- a/package.json
+++ b/package.json
@@ -3,9 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "bootstrap": "^4.3.1",
     "react": "^16.8.6",
+    "react-bootstrap": "^1.0.0-beta.9",
     "react-dom": "^16.8.6",
-    "react-scripts": "3.0.1"
+    "react-loader-spinner": "^2.3.0",
+    "react-motion": "^0.5.2",
+    "react-scripts": "3.0.1",
+    "url": "^0.11.0"
   },
   "scripts": {
     "start": "react-scripts start",
